flattening the src and build files to top level

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Website for EasyTaxPlanning.com",
   "main": "tailwind.config.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
-    "build": "cp src/index.html public/index.html; cp src/output.css public/output.css; cp src/img/* public/img/"
+    "dev": "npx tailwindcss -i ./input.css -o ./output.css --watch"    
   },
   "author": "",
   "license": "ISC"
